--- a/pokemon-app/src/App.css
+++ b/pokemon-app/src/App.css
@@ -55,8 +55,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  gap: 1rem;
-  justify-content: center;
+  gap: 2rem;
 }
 
 .pokemon {
@@ -72,6 +71,11 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+}
+
+.pokemon:hover {
+  background-color: #f1f1f1;
 }
 
 .pokemonName {
@@ -143,9 +147,15 @@ body {
   text-align: left;
   margin-bottom: 0;
 }
+.leftStats{
+  max-width: 200px;
+  width: 200px;
+  margin-left: 3rem;
+}
 .bioBio {
   display: flex;
   flex-direction: column;
+  margin-left: 2rem;
 }
 .innerMainBio{
     display: flex;
@@ -186,4 +196,5 @@ body {
 .bar{
     height: 10px;
     border-radius: 10px;
+    max-width: 220px;
 }
