--- a/pokemon-app/src/App.css
+++ b/pokemon-app/src/App.css
@@ -18,6 +18,22 @@ body {
   justify-content: center;
   align-items: center;
   height: 300px;
+  max-height: 300px;
+  flex-direction: column;
+}
+
+.checkBoxSection{
+  display: flex;
+  margin-top: 2rem;
+  width: 400px;
+  max-width: 400px;
+  justify-content: space-between;
+}
+
+label{
+  font-family: "Poppins", sans-serif;
+  color: white;
+  font-size: 20px;
 }
 
 .textSection {
